--- a/apple01.html
+++ b/apple01.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
-    <meta name="author" content="webstoryboy" />
+    <meta name="author" content="giraff" />
     <meta
       name="description"
       content="뮤직 모바일 메인에서 다양한 정보와 유용한 컨텐츠를 만나 보세요"
@@ -44,22 +44,22 @@
     <!-- icon -->
     <link
       rel="apple-touch-icon-precomposed"
-      href="https://webstoryboy.github.io/apple/assets/icon/icon.jpg"
+      href="https://giraff.github.io/apple/assets/icon/icon.jpg"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="96x96"
-      href="https://webstoryboy.github.io/apple/assets/icon/icon_96.jpg"
+      href="https://giraff.github.io/apple/assets/icon/icon_96.jpg"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="144x144"
-      href="https://webstoryboy.github.io/apple/assets/icon/icon_144.jpg"
+      href="https://giraff.github.io/apple/assets/icon/icon_144.jpg"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="192x192"
-      href="https://webstoryboy.github.io/apple/assets/icon/icon_192.jpg"
+      href="https://giraff.github.io/apple/assets/icon/icon_192.jpg"
     />
 
     <!-- style -->
